[SF-014]: User authentication and fix CI
